# anksidian

./: .gitignore  Cargo.toml  README.md  disable_highlight.css  flake.nix  test.md
src/: anki.rs  anksidian.pest  handle_md.rs  main.rs  md_pest.rs  md_tparse.rs
