cargo-features = ["codegen-backend"]
[package]
name = "anksidian"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
  "http2",
  "charset",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["net", "rt", "macros"] }
