cargo-features = ["codegen-backend"]
[package]
name = "anksidian"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.2", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
    "charset",
] }
tparse = { git = "https://github.com/jullanggit/tparse" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "process",
] }
thiserror = "2.0.12"

[lints.clippy]
unwrap_used = "warn"
