cargo-features = ["codegen-backend"]
[package]
name = "anksidian"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.2", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
tparse = { git = "https://github.com/jullanggit/tparse" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
ureq = { version = "3.0.12", default-features = false, features = ["json"] }

[lints.clippy]
unwrap_used = "warn"
